--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
           </nav>
         <header>
-          <div class="row justify-content-center">
+          <div class="row justify-content-center mt-4">
           <div id="carouselExampleCaptions" class="carousel slide col-8" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
