--- a/adopciones.html
+++ b/adopciones.html
@@ -9,19 +9,19 @@
         <link type="text/css" rel="stylesheet" href="css/style.css">
     </head>
     <body class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Refugio Canino</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-                  <a class="nav-link" href="./adopciones.html">Adopciones</a>
-                  <a class="nav-link" href="#">Nuestros objetivos</a>
-                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Historias</a>
-                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Chat</a>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light row">
+        <div class="container-fluid col-12 footerynav">
+          <a class="navbar-brand" href="#">Refugio Canino</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+              <a class="nav-link" href="./adopciones.html">Adopciones</a>
+              <a class="nav-link" href="./objetivos.html">Nuestros objetivos</a>
+              <a class="nav-link" href="./historias.html">Historias</a>
+              <a class="nav-link" href="./chat.html">Chat</a>
                 </div>
               </div>
             </div>
@@ -109,9 +109,11 @@
 
         </main>
 
-        <footer>
-            
-    
+        <footer class="bg-light text-center text-lg-start row">
+          <div class="text-center p-3 mt-5 footerynav">
+            © 2021 Copyright:
+            <a>NicolasCastillo.com</a>
+          </div>
         </footer>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
