--- a/historias.html
+++ b/historias.html
@@ -29,11 +29,29 @@
             </div>
           </nav>
         <header>
+            <h1 class="text-center">HISTORIAS DE SUPERVIVIENTES</h1>
           
         </header>
         <main>
-           
+          <div class="row justify-content-start">
+                  <h4 class="text-center">Estos perros llegaron a nuestro refugio, se les brindaron los cuidados necesarios y ahora disfrutan de una nueva vida con sus amorosas familias.</h4>
 
+                  <h3 class="text-start">Pocho</h3>
+                  <img class="col-12 col-sm-10 col-md-9 col-lg-8" src="./img/perro1antesydespues.jpg">
+                  <p>Integer sagittis mauris non sem commodo efficitur. Suspendisse potenti. Aliquam porttitor iaculis nibh eget sagittis. Duis ut felis sem. Fusce rhoncus posuere lacinia. Etiam luctus blandit tellus, ut lobortis urna condimentum sit amet. Quisque gravida nisi sed purus placerat vestibulum. Nam porttitor eleifend elit sed facilisis. Etiam tincidunt eu justo in tincidunt. Etiam ut arcu pellentesque, blandit lorem eu, rhoncus diam. Aliquam erat volutpat. Nulla hendrerit condimentum eros non eleifend. Donec in laoreet dolor. Aenean et elementum massa.</p>
+
+                  <h3 class="text-start">Rita</h3>
+                  <img class="col-12 col-sm-10 col-md-9 col-lg-8" src="./img/rita.jpg">
+                  <p>Suspendisse eget volutpat tortor, quis dapibus dolor. Mauris odio elit, pharetra non aliquet lacinia, varius id mi. Curabitur nisi odio, scelerisque et mauris a, suscipit placerat lorem. Praesent nec venenatis mauris, eget laoreet lorem. Aliquam purus odio, consectetur quis convallis in, fringilla et odio. Nulla mattis, leo in aliquet vestibulum, erat tellus scelerisque arcu, eget dictum sapien orci non magna. Praesent sapien diam, posuere vitae laoreet eu, fringilla id nulla. Quisque sollicitudin condimentum arcu id volutpat. Praesent mattis pretium imperdiet. Quisque at elit velit.</p>
+
+                  <h3 class="text-start">Lambo</h3>
+                  <img class="col-12 col-sm-10 col-md-9 col-lg-8" src="./img/Lambo.jpg">
+                  <p>Phasellus feugiat, ipsum id eleifend interdum, purus risus convallis erat, tristique suscipit enim magna ut eros. Ut sed dictum mi. Quisque lectus justo, rutrum eu maximus sit amet, sollicitudin pulvinar lacus. Nullam ut dictum elit. Maecenas et nunc lacus. Vestibulum at erat rhoncus mi fringilla mattis vel nec diam. Praesent mauris tortor, efficitur eu libero a, pulvinar mattis sapien. Suspendisse vitae quam eu diam pharetra vestibulum sed id neque. Maecenas in euismod nisi. Etiam et turpis in elit lobortis semper.</p>
+
+                  <h3 class="text-start">Danica</h3>
+                  <img class="col-12 col-sm-10 col-md-9 col-lg-8" src="./img/Danica.jpg">
+                  <p>Nulla laoreet urna nec diam porttitor, sed aliquam odio bibendum. Fusce vitae lacus lectus. Etiam non commodo nisi. Pellentesque et quam vel odio congue bibendum. Praesent vulputate venenatis est, ut tempor diam ullamcorper et. Vestibulum neque erat, tristique et felis ac, commodo ornare lacus. Duis finibus, erat iaculis posuere commodo, metus sapien iaculis mauris, in congue justo quam at lacus. Fusce pharetra diam elit, vitae lacinia sapien bibendum at. Morbi nec orci a turpis auctor aliquam sed et risus. Etiam gravida metus consequat ante ornare auctor. Nullam vel molestie arcu. Aenean eget felis ut leo suscipit condimentum nec ac ex. Vestibulum tincidunt libero lectus, iaculis convallis mi finibus ac.</p>
+          </div>   
         </main>
           <footer class="bg-light text-center text-lg-start row">
             <div class="text-center p-3 mt-5 footerynav">
