--- a/adopciones.html
+++ b/adopciones.html
@@ -35,44 +35,44 @@
             <h2 class="text-center mb-4">Perros pequeños</h2>
             <div class="row justify-content-around">
 
-                <div class="card col-2">
+                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3">
                     <img src="./img/beagle.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
 
-                <div class="card col-2">
+                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3">
                     <img src="./img/chihuahua.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
  
-                <div class="card col-2">
+                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3">
                     <img src="./img/yorkshire.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
 
-                <div class="card col-2">
+                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3">
                     <img src="./img/caniche.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
             </div>
-            <h2 class="text-center mb-4 mt-4">Perros medianos</h2>
+            <h2 class="text-center mb-4">Perros medianos</h2>
             <div class="row justify-content-around">
-                <div class="card col-3">
+                <div class="card col-12 col-sm-7 col-md-7 col-lg-3 mb-3">
                     <img src="./img/dalmata.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
 
-                <div class="card col-3">
+                <div class="card col-12 col-sm-7 col-md-7 col-lg-3 mb-3">
                     <img src="./img/bordercollie.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -80,7 +80,7 @@
                 </div>
 
     
-                <div class="card col-3">
+                <div class="card col-12 col-sm-7 col-md-7 col-lg-3">
                     <img src="./img/corgi.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -88,17 +88,17 @@
                 </div>
 
             </div>
-            <h2 class="text-center mt-4 mb-4">Perros grandes</h2>
+            <h2 class="text-center mt-2 mb-4">Perros grandes</h2>
             <div class="row justify-content-around">
 
-                <div class="card col-5">
+                <div class="card col-12 col-sm-8 col-md-8 col-lg-5 mb-3">
                     <img src="./img/Mastiff.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
 
-                <div class="card col-5">
+                <div class="card col-12 col-sm-8 col-md-8 col-lg-5">
                     <img src="./img/pitbull.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
