--- a/chat.html
+++ b/chat.html
@@ -34,9 +34,7 @@
               </div>
         </header>
         <main class="row justify-content-center mt-4">
-            <div class="col-8">
-               <img src="./img/mantenimiento.jpg">
-            </div>
+            <img class=" col-sm-10 col-md-9 col-lg-8" src="./img/mantenimiento.jpg">
         </main>
           <footer class="bg-light text-center text-lg-start row">
             <div class="text-center p-3 mt-5 footerynav">
