--- a/objetivos.html
+++ b/objetivos.html
@@ -36,7 +36,7 @@
             <div class="row">
                 <div class="justify-content-start">
                    <h2> 1-Rescatar</h2>
-                   <img class="col-6 mb-2 mt-2" src="./img/perroabandonado.jpg">
+                   <img class="col-12 col-sm-8 col-md-7 col-lg-6 mb-2 mt-2" src="./img/perroabandonado.jpg">
                    <p>Sed sollicitudin a turpis eget commodo. Suspendisse potenti. Nullam vitae arcu porta, molestie augue et, sagittis turpis. Maecenas venenatis magna lacus, sit amet laoreet ante ullamcorper vitae. Proin turpis turpis, dapibus vel mattis convallis, tincidunt et elit. Ut blandit nisi non ante scelerisque, et malesuada odio finibus. Morbi congue euismod volutpat. Ut quis enim ac tortor pretium eleifend quis hendrerit nulla. Integer volutpat at augue sed scelerisque. Duis dignissim nisi ligula, id placerat dolor convallis vitae. Suspendisse id tempor odio, at tincidunt libero. Integer nec est metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae.</p>
                 </div>
             </div>
@@ -44,7 +44,7 @@
           <div class="row">
             <div class="justify-content-start">
                <h2> 2-Rehabilitar</h2>
-               <img class="col-6 mb-2 mt-2" src="img/perroveterinario.jpg">
+               <img class="col-12 col-sm-8 col-md-7 col-lg-6 mb-2 mt-2" src="img/perroveterinario.jpg">
                <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed et ullamcorper magna, a convallis turpis. In hac habitasse platea dictumst. Donec sit amet sollicitudin leo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut ac auctor lorem. In egestas mi sed dui interdum, id mollis quam fringilla. Ut aliquet lorem quis mi gravida rhoncus. Nunc quis commodo erat. Suspendisse volutpat posuere volutpat. Aenean non neque porta, suscipit elit id, maximus ipsum. Morbi posuere, ipsum a semper faucibus, felis ligula ullamcorper nulla, in maximus odio ex a lectus. Fusce et velit ullamcorper, tincidunt lorem et, lobortis est. Etiam at metus sit amet lectus consequat finibus. Duis congue quam ut felis facilisis vulputate. Ut vel mi cursus odio tincidunt vulputate.</p>
             </div>
           </div>
@@ -52,7 +52,7 @@
           <div class="row">
             <div class="justify-content-start">
                <h2> 3-Adoptar</h2>
-               <img class="col-6 mb-2 mt-2" src="./img/perroadoptame.jpg">
+               <img class="col-12 col-sm-8 col-md-7 col-lg-6 mb-2 mt-2" src="./img/perroadoptame.jpg">-
                <p>Morbi sed luctus erat. Etiam sagittis in lorem in imperdiet. Nulla eros arcu, placerat sit amet vulputate ut, interdum a eros. Sed nisi turpis, aliquet malesuada diam sit amet, gravida egestas ligula. Donec euismod rhoncus ultrices. Nunc vel lorem porttitor, mattis ex at, accumsan justo. Vestibulum vel sagittis sapien, eu tempor leo. Cras eget scelerisque quam. Maecenas libero lacus, convallis blandit urna eu, dictum ultrices nulla. Proin molestie vel orci eu egestas. Fusce porta, elit in lobortis feugiat, turpis eros mattis dolor, a semper turpis nibh sit amet lacus. Aliquam pellentesque justo purus, placerat bibendum mauris elementum a. Praesent et facilisis tellus. Nullam in arcu ipsum. Cras eget magna sit amet turpis dictum eleifend.</p>
             </div>
           </div>
@@ -60,13 +60,13 @@
           <div class="row">
             <div class="justify-content-start">
                <h2> 4-Supervisar</h2>
-               <img class="col-6 mt-2" src="./img/perrocorriendo.jpg">
+               <img class="col-12 col-sm-8 col-md-7 col-lg-6 mt-2 mb-2" src="./img/perrocorriendo.jpg">
                <p>Morbi sed luctus erat. Etiam sagittis in lorem in imperdiet. Nulla eros arcu, placerat sit amet vulputate ut, interdum a eros. Sed nisi turpis, aliquet malesuada diam sit amet, gravida egestas ligula. Donec euismod rhoncus ultrices. Nunc vel lorem porttitor, mattis ex at, accumsan justo. Vestibulum vel sagittis sapien, eu tempor leo. Cras eget scelerisque quam. Maecenas libero lacus, convallis blandit urna eu, dictum ultrices nulla. Proin molestie vel orci eu egestas. Fusce porta, elit in lobortis feugiat, turpis eros mattis dolor, a semper turpis nibh sit amet lacus. Aliquam pellentesque justo purus, placerat bibendum mauris elementum a. Praesent et facilisis tellus. Nullam in arcu ipsum. Cras eget magna sit amet turpis dictum eleifend.</p>
             </div>
           </div>
         </main>
           <footer class="bg-light text-center text-lg-start row">
-            <div class="text-center p-3 mt-4 footerynav">
+            <div class="text-center p-3 mt-2 footerynav">
               © 2021 Copyright:
               <a>NicolasCastillo.com</a>
             </div>
