--- a/adopciones.html
+++ b/adopciones.html
@@ -18,10 +18,10 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-              <a class="nav-link" href="./adopciones.html">Adopciones</a>
-              <a class="nav-link" href="./objetivos.html">Nuestros objetivos</a>
-              <a class="nav-link" href="./historias.html">Historias</a>
-              <a class="nav-link" href="./chat.html">Chat</a>
+                  <a class="nav-link active" aria-current="page"  href="./adopciones.html">Adopciones</a>
+                  <a class="nav-link active" aria-current="page"  href="./objetivos.html">Nuestros objetivos</a>
+                  <a class="nav-link active" aria-current="page" href="./historias.html">Historias</a>
+                  <a class="nav-link active" aria-current="page" href="./chat.html">Chat</a>
                 </div>
               </div>
             </div>
