--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-                  <a class="nav-link" href="./adopciones.html">Adopciones</a>
-                  <a class="nav-link" href="./objetivos.html">Nuestros objetivos</a>
-                  <a class="nav-link" href="./historias.html">Historias</a>
-                  <a class="nav-link" href="./chat.html">Chat</a>
+                  <a class="nav-link active" aria-current="page"  href="./adopciones.html">Adopciones</a>
+                  <a class="nav-link active" aria-current="page"  href="./objetivos.html">Nuestros objetivos</a>
+                  <a class="nav-link active" aria-current="page" href="./historias.html">Historias</a>
+                  <a class="nav-link active" aria-current="page" href="./chat.html">Chat</a>
                 </div>
               </div>
             </div>
@@ -71,9 +71,18 @@
           </div>
         </header>
         <main>
-           
-
-        </main>
+          <h1 class="text-center mt-2 mb-3"> Bienvenido a la pagina del refugio canino de La Matanza</h1>
+            <div class="row justify-content-center">
+              <img class="col-7" src="./img/perroacariciado.png">
+            </div>
+          <h2 class="text-start">Quienes somos</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut faucibus elementum massa non egestas. Duis gravida pellentesque ligula id scelerisque. Pellentesque interdum viverra felis in ullamcorper. Duis mollis faucibus sem in tincidunt. Nulla consequat, lacus vitae tincidunt luctus, mauris magna iaculis nulla, sit amet blandit tortor lorem ac eros. Sed sed dictum purus. Morbi erat nisl, sollicitudin nec ex vitae, facilisis mattis dui. Morbi imperdiet mauris placerat, ullamcorper neque et, aliquet ligula. Nunc quis elementum sem. Sed suscipit enim eget felis rutrum porttitor. Praesent fringilla sit amet mauris luctus sodales. Cras convallis dui eu tincidunt interdum. Vestibulum mi dolor, blandit tincidunt sem fermentum, sollicitudin pellentesque mauris. Morbi pulvinar massa id lectus rutrum, sed luctus elit sollicitudin. Fusce ultrices risus et elit sagittis lobortis.</p>
+          <h2 class="text-start">Contactenos</h2>
+            <p>Telefono: 4423-1207</p>
+            <p>Celular: 1523993798</p>
+          <h2 class="text-start">Localizacion</h2>
+            <p>Cristiania 1875 a 5 cuadras de la Plaza de Atalaya</p>
+          </main>
           <footer class="bg-light text-center text-lg-start row">
             <div class="text-center p-3 mt-5 footerynav">
               © 2021 Copyright:
