--- a/adopciones.html
+++ b/adopciones.html
@@ -38,28 +38,36 @@
                 <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3">
                     <img src="./img/beagle.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h3 class="card-text macho">Fer</h3>
+                      <h5 class="card-text">Edad: 6 meses</h5>
+                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed eleifend velit.</p>
                     </div>
                 </div>
 
                 <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3">
                     <img src="./img/chihuahua.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h3 class="card-text macho">Jalapeño</h3>
+                      <h5 class="card-text">Edad: 3 años</h5>
+                      <p class="card-text">Teger tortor dui, congue eget porta a, egestas id magna. In non urna pretium tell.</p>
                     </div>
                 </div>
  
                 <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3">
                     <img src="./img/yorkshire.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h3 class="card-text hembra">Mila</h3>
+                      <h5 class="card-text">Edad: 2 años</h5>
+                      <p class="card-text">Donec mollis volutpat metus nec varius. Proin arcu massa, iaculis id vestibulum sit.</p>
                     </div>
                 </div>
 
                 <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3">
                     <img src="./img/caniche.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h3 class="card-text macho">Carlitos</h3>
+                      <h5 class="card-text">Edad: 5 años</h5>
+                      <p class="card-text">Vivamus ornare et ex ac pretium. Vestibulum consectetur porttitor rutrum. Aenean sed.</p>
                     </div>
                 </div>
             </div>
@@ -68,22 +76,27 @@
                 <div class="card col-12 col-sm-7 col-md-7 col-lg-3 mb-3">
                     <img src="./img/dalmata.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h3 class="card-text macho">Buster</h3>
+                      <h5 class="card-text">Edad: 4 años</h5>
+                      <p class="card-text">Curabitur ac placerat lorem. Duis egestas turpis a pharetra fringilla. Duis non nulla velit. Vivamus rutrum neque sit amet risus auctor, eget condimentum.</p>
                     </div>
                 </div>
 
                 <div class="card col-12 col-sm-7 col-md-7 col-lg-3 mb-3">
                     <img src="./img/bordercollie.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h3 class="card-text macho">Einstein</h3>
+                      <h5 class="card-text">Edad: 3 meses</h5>
+                      <p class="card-text">Proin arcu massa, iaculis id vestibulum sit amet, vehicula a velit. Duis convallis tincidunt gravida. Sed ullamcorper venenatis nisl. Cras mattis tristique malesuada.</p>
                     </div>
                 </div>
 
-    
                 <div class="card col-12 col-sm-7 col-md-7 col-lg-3">
                     <img src="./img/corgi.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h3 class="card-text hembra">Nugget</h3>
+                      <h5 class="card-text">Edad: 4 años</h5>
+                      <p class="card-text"> Morbi lobortis leo quis dignissim vehicula. Suspendisse molestie suscipit maximus. Donec sed tellus at risus volutpat dictum. Duis magna quam, condimentum nec nunc at, congue mollis odio.</p>
                     </div>
                 </div>
 
@@ -94,14 +107,18 @@
                 <div class="card col-12 col-sm-8 col-md-8 col-lg-5 mb-3">
                     <img src="./img/Mastiff.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
+                      <h3 class="card-text macho">Rocco</h3>
+                      <h5 class="card-text">Edad: 7 años</h5>
+                      <p class="card-text"> Nunc eget ipsum nibh. Donec nec ipsum arcu. In luctus sodales turpis, nec cursus massa. Mauris convallis venenatis ipsum, id vulputate mi vehicula ut. Aenean et orci nisl. Pellentesque justo erat, accumsan sit amet elementum sit amet, convallis ac turpis.</p>
+                      </div>
                 </div>
 
                 <div class="card col-12 col-sm-8 col-md-8 col-lg-5">
                     <img src="./img/pitbull.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h3 class="card-text hembra">Leona</h3>
+                      <h5 class="card-text">Edad: 6 años</h5>
+                      <p class="card-text">Nunc rhoncus turpis eget feugiat iaculis. In auctor ex dignissim neque rutrum pharetra. Donec aliquet lectus eros, eget finibus velit ultrices eget. Aenean fermentum metus vel nisi finibus volutpat.</p>
                     </div>
                 </div>
             </div>
