--- a/chat.html
+++ b/chat.html
@@ -13,7 +13,7 @@
     <body class="container-fluid ">
       <nav class="navbar navbar-expand-lg navbar-light bg-light row">
         <div class="container-fluid col-12 footerynav">
-          <a class="navbar-brand" href="#">Refugio Canino</a>
+          <a class="navbar-brand">Refugio Canino</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
