--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </nav>
         <header>
           <div class="row justify-content-center mt-4">
-          <div id="carouselExampleCaptions" class="carousel slide col-8" data-bs-ride="carousel">
+          <div id="carouselExampleCaptions" class="carousel slide col-12 col-sm-10 col-md-9 col-lg-8" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
