--- a/historias.html
+++ b/historias.html
@@ -29,12 +29,12 @@
             </div>
           </nav>
         <header>
-            <h1 class="text-center">HISTORIAS DE SUPERVIVIENTES</h1>
+            <h1 class="text-center titulohistorias">HISTORIAS DE SUPERVIVIENTES</h1>
           
         </header>
         <main>
           <div class="row justify-content-start">
-                  <h4 class="text-center">Estos perros llegaron a nuestro refugio, se les brindaron los cuidados necesarios y ahora disfrutan de una nueva vida con sus amorosas familias.</h4>
+                  <h4 class="text-center subtitulohistorias">Estos perros llegaron a nuestro refugio, se les brindaron los cuidados necesarios y ahora disfrutan de una nueva vida con sus amorosas familias.</h4>
 
                   <h3 class="text-start macho">Pocho</h3>
                   <img class="col-12 col-sm-10 col-md-9 col-lg-8" src="./img/perro1antesydespues.jpg">
