--- a/adopciones.html
+++ b/adopciones.html
@@ -27,12 +27,12 @@
             </div>
           </nav>
         <header>
-            <h1 class="text-center mb-5">Disponibles para adoptar</h1>
+            <h1 class="text-center mb-5 titulos">Disponibles para adoptar</h1>
 
         </header>
           
         <main>
-            <h2 class="text-center mb-4">Perros pequeños</h2>
+            <h2 class="text-center mb-4 pequeños">Perros pequeños</h2>
             <div class="row justify-content-around">
 
                 <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3">
@@ -71,7 +71,7 @@
                     </div>
                 </div>
             </div>
-            <h2 class="text-center mb-4">Perros medianos</h2>
+            <h2 class="text-center mb-4 medianos">Perros medianos</h2>
             <div class="row justify-content-around">
                 <div class="card col-12 col-sm-7 col-md-7 col-lg-3 mb-3">
                     <img src="./img/dalmata.jpg" class="card-img-top" alt="...">
@@ -101,7 +101,7 @@
                 </div>
 
             </div>
-            <h2 class="text-center mt-2 mb-4">Perros grandes</h2>
+            <h2 class="text-center mt-2 mb-4 grandes">Perros grandes</h2>
             <div class="row justify-content-around">
 
                 <div class="card col-12 col-sm-8 col-md-8 col-lg-5 mb-3">
