--- a/adopciones.html
+++ b/adopciones.html
@@ -35,8 +35,8 @@
             <h2 class="text-center mb-4 pequeños">Perros pequeños</h2>
             <div class="row justify-content-around">
 
-                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3">
-                    <img src="./img/beagle.jpg" class="card-img-top" alt="...">
+                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3 machomarco">
+                    <img src="./img/beagle.jpg" class="card-img-top machomarco mt-2" alt="...">
                     <div class="card-body">
                       <h3 class="card-text macho">Fer</h3>
                       <h5 class="card-text">Edad: 6 meses</h5>
@@ -44,8 +44,8 @@
                     </div>
                 </div>
 
-                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3">
-                    <img src="./img/chihuahua.jpg" class="card-img-top" alt="...">
+                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3 machomarco">
+                    <img src="./img/chihuahua.jpg" class="card-img-top mt-2 machomarco" alt="...">
                     <div class="card-body">
                       <h3 class="card-text macho">Jalapeño</h3>
                       <h5 class="card-text">Edad: 3 años</h5>
@@ -53,8 +53,8 @@
                     </div>
                 </div>
  
-                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3">
-                    <img src="./img/yorkshire.jpg" class="card-img-top" alt="...">
+                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3 hembramarco">
+                    <img src="./img/yorkshire.jpg" class="card-img-top hembramarco mt-2" alt="...">
                     <div class="card-body">
                       <h3 class="card-text hembra">Mila</h3>
                       <h5 class="card-text">Edad: 2 años</h5>
@@ -62,8 +62,8 @@
                     </div>
                 </div>
 
-                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3">
-                    <img src="./img/caniche.jpg" class="card-img-top" alt="...">
+                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3 machomarco">
+                    <img src="./img/caniche.jpg" class="card-img-top machomarco mt-2" alt="...">
                     <div class="card-body">
                       <h3 class="card-text macho">Carlitos</h3>
                       <h5 class="card-text">Edad: 5 años</h5>
@@ -73,8 +73,8 @@
             </div>
             <h2 class="text-center mb-4 medianos">Perros medianos</h2>
             <div class="row justify-content-around">
-                <div class="card col-12 col-sm-7 col-md-7 col-lg-3 mb-3">
-                    <img src="./img/dalmata.jpg" class="card-img-top" alt="...">
+                <div class="card col-12 col-sm-7 col-md-7 col-lg-3 mb-3 machomarco">
+                    <img src="./img/dalmata.jpg" class="card-img-top machomarco mt-2" alt="...">
                     <div class="card-body">
                       <h3 class="card-text macho">Buster</h3>
                       <h5 class="card-text">Edad: 4 años</h5>
@@ -82,8 +82,8 @@
                     </div>
                 </div>
 
-                <div class="card col-12 col-sm-7 col-md-7 col-lg-3 mb-3">
-                    <img src="./img/bordercollie.jpg" class="card-img-top" alt="...">
+                <div class="card col-12 col-sm-7 col-md-7 col-lg-3 mb-3 machomarco">
+                    <img src="./img/bordercollie.jpg" class="card-img-top machomarco mt-2" alt="...">
                     <div class="card-body">
                       <h3 class="card-text macho">Einstein</h3>
                       <h5 class="card-text">Edad: 3 meses</h5>
@@ -91,8 +91,8 @@
                     </div>
                 </div>
 
-                <div class="card col-12 col-sm-7 col-md-7 col-lg-3">
-                    <img src="./img/corgi.jpg" class="card-img-top" alt="...">
+                <div class="card col-12 col-sm-7 col-md-7 col-lg-3 hembramarco">
+                    <img src="./img/corgi.jpg" class="card-img-top hembramarco mt-2" alt="...">
                     <div class="card-body">
                       <h3 class="card-text hembra">Nugget</h3>
                       <h5 class="card-text">Edad: 4 años</h5>
@@ -104,8 +104,8 @@
             <h2 class="text-center mt-2 mb-4 grandes">Perros grandes</h2>
             <div class="row justify-content-around">
 
-                <div class="card col-12 col-sm-8 col-md-8 col-lg-5 mb-3">
-                    <img src="./img/Mastiff.jpg" class="card-img-top" alt="...">
+                <div class="card col-12 col-sm-8 col-md-8 col-lg-5 mb-3 machomarco">
+                    <img src="./img/Mastiff.jpg" class="card-img-top machomarco mt-2" alt="...">
                     <div class="card-body">
                       <h3 class="card-text macho">Rocco</h3>
                       <h5 class="card-text">Edad: 7 años</h5>
@@ -113,8 +113,8 @@
                       </div>
                 </div>
 
-                <div class="card col-12 col-sm-8 col-md-8 col-lg-5">
-                    <img src="./img/pitbull.jpg" class="card-img-top" alt="...">
+                <div class="card col-12 col-sm-8 col-md-8 col-lg-5 hembramarco">
+                    <img src="./img/pitbull.jpg" class="card-img-top hembramarco mt-2" alt="...">
                     <div class="card-body">
                       <h3 class="card-text hembra">Leona</h3>
                       <h5 class="card-text">Edad: 6 años</h5>
