--- a/adopciones.html
+++ b/adopciones.html
@@ -35,7 +35,7 @@
             <h2 class="text-center mb-4 pequeños">Perros pequeños</h2>
             <div class="row justify-content-around">
 
-                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3 machomarco">
+                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3 machomarco bordemacho">
                     <img src="./img/beagle.jpg" class="card-img-top machomarco mt-2" alt="...">
                     <div class="card-body">
                       <h3 class="card-text macho">Fer</h3>
@@ -44,7 +44,7 @@
                     </div>
                 </div>
 
-                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3 machomarco">
+                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3 machomarco bordemacho">
                     <img src="./img/chihuahua.jpg" class="card-img-top mt-2 machomarco" alt="...">
                     <div class="card-body">
                       <h3 class="card-text macho">Jalapeño</h3>
@@ -53,7 +53,7 @@
                     </div>
                 </div>
  
-                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3 hembramarco">
+                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3 hembramarco bordehembra">
                     <img src="./img/yorkshire.jpg" class="card-img-top hembramarco mt-2" alt="...">
                     <div class="card-body">
                       <h3 class="card-text hembra">Mila</h3>
@@ -62,7 +62,7 @@
                     </div>
                 </div>
 
-                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3 machomarco">
+                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3 machomarco bordemacho">
                     <img src="./img/caniche.jpg" class="card-img-top machomarco mt-2" alt="...">
                     <div class="card-body">
                       <h3 class="card-text macho">Carlitos</h3>
@@ -73,7 +73,7 @@
             </div>
             <h2 class="text-center mb-4 medianos">Perros medianos</h2>
             <div class="row justify-content-around">
-                <div class="card col-12 col-sm-7 col-md-7 col-lg-3 mb-3 machomarco">
+                <div class="card col-12 col-sm-7 col-md-7 col-lg-3 mb-3 machomarco bordemacho">
                     <img src="./img/dalmata.jpg" class="card-img-top machomarco mt-2" alt="...">
                     <div class="card-body">
                       <h3 class="card-text macho">Buster</h3>
@@ -82,7 +82,7 @@
                     </div>
                 </div>
 
-                <div class="card col-12 col-sm-7 col-md-7 col-lg-3 mb-3 machomarco">
+                <div class="card col-12 col-sm-7 col-md-7 col-lg-3 mb-3 machomarco bordemacho">
                     <img src="./img/bordercollie.jpg" class="card-img-top machomarco mt-2" alt="...">
                     <div class="card-body">
                       <h3 class="card-text macho">Einstein</h3>
@@ -91,7 +91,7 @@
                     </div>
                 </div>
 
-                <div class="card col-12 col-sm-7 col-md-7 col-lg-3 hembramarco">
+                <div class="card col-12 col-sm-7 col-md-7 col-lg-3 hembramarco bordehembra">
                     <img src="./img/corgi.jpg" class="card-img-top hembramarco mt-2" alt="...">
                     <div class="card-body">
                       <h3 class="card-text hembra">Nugget</h3>
@@ -104,7 +104,7 @@
             <h2 class="text-center mt-2 mb-4 grandes">Perros grandes</h2>
             <div class="row justify-content-around">
 
-                <div class="card col-12 col-sm-8 col-md-8 col-lg-5 mb-3 machomarco">
+                <div class="card col-12 col-sm-8 col-md-8 col-lg-5 mb-3 machomarco bordemacho">
                     <img src="./img/Mastiff.jpg" class="card-img-top machomarco mt-2" alt="...">
                     <div class="card-body">
                       <h3 class="card-text macho">Rocco</h3>
@@ -113,7 +113,7 @@
                       </div>
                 </div>
 
-                <div class="card col-12 col-sm-8 col-md-8 col-lg-5 hembramarco">
+                <div class="card col-12 col-sm-8 col-md-8 col-lg-5 hembramarco bordehembra">
                     <img src="./img/pitbull.jpg" class="card-img-top hembramarco mt-2" alt="...">
                     <div class="card-body">
                       <h3 class="card-text hembra">Leona</h3>
