--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
-            <div class="carousel-inner">
+            <div class="carousel-inner carouselmarco">
               <div class="carousel-item active">
                 <img src="./img/PerrosJugando.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
