--- a/adopciones.html
+++ b/adopciones.html
@@ -27,7 +27,7 @@
             </div>
           </nav>
         <header>
-            <h1 class="text-center mb-5 titulos">Disponibles para adoptar</h1>
+            <h1 class="text-center mb-5 tituloadopciones">Disponibles para adoptar</h1>
 
         </header>
           
