--- a/chat.html
+++ b/chat.html
@@ -29,7 +29,7 @@
         </div>
       </nav>
         <header>
-            <div class="alert alert-danger text-center" role="alert">
+            <div class="alert alert-danger text-center alertamarco" role="alert">
                 Esta funcion se encuentra actualmente en mantenimiento,disculpe las molestias.
               </div>
         </header>
