--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
           </div>
         </header>
         <main>
-          <h1 class="text-center mt-2 mb-3 titulos"> Bienvenido a la pagina del refugio canino de La Matanza</h1>
+          <h1 class="text-center mt-2 mb-3 titulobienvenidos"> Bienvenido a la pagina del refugio canino de La Matanza</h1>
             <div class=" row justify-content-center">
               <iframe width="624" height="300" class=" col-12 col-sm-8 col-md-7 col-lg-6" src="https://www.youtube.com/embed/F0TPwpzaxeg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-          <h2 class="text-start titulos">Quienes somos</h2>
+          <h2 class="text-start subtitulosindex">Quienes somos</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut faucibus elementum massa non egestas. Duis gravida pellentesque ligula id scelerisque. Pellentesque interdum viverra felis in ullamcorper. Duis mollis faucibus sem in tincidunt. Nulla consequat, lacus vitae tincidunt luctus, mauris magna iaculis nulla, sit amet blandit tortor lorem ac eros. Sed sed dictum purus. Morbi erat nisl, sollicitudin nec ex vitae, facilisis mattis dui. Morbi imperdiet mauris placerat, ullamcorper neque et, aliquet ligula. Nunc quis elementum sem. Sed suscipit enim eget felis rutrum porttitor. Praesent fringilla sit amet mauris luctus sodales. Cras convallis dui eu tincidunt interdum. Vestibulum mi dolor, blandit tincidunt sem fermentum, sollicitudin pellentesque mauris. Morbi pulvinar massa id lectus rutrum, sed luctus elit sollicitudin. Fusce ultrices risus et elit sagittis lobortis.</p>
-          <h2 class="text-start titulos">Contactenos</h2>
+          <h2 class="text-start subtitulosindex">Contactenos</h2>
             <p>Telefono: 4423-1207</p>
             <p>Celular: 1523993798</p>
-          <h2 class="text-start titulos">Localizacion</h2>
+          <h2 class="text-start subtitulosindex">Localizacion</h2>
             <p>Cristiania 1875 a 5 cuadras de la Plaza de Atalaya</p>
           </main>
           <footer class="bg-light text-center text-lg-start row">
