--- a/adopciones.html
+++ b/adopciones.html
@@ -86,7 +86,7 @@
                     <img src="./img/bordercollie.jpg" class="card-img-top machomarco mt-2" alt="...">
                     <div class="card-body">
                       <h3 class="card-text macho">Einstein</h3>
-                      <h5 class="card-text">Edad: 3 meses</h5>
+                      <h5 class="card-text">Edad: 3 años</h5>
                       <p class="card-text">Proin arcu massa, iaculis id vestibulum sit amet, vehicula a velit. Duis convallis tincidunt gravida. Sed ullamcorper venenatis nisl. Cras mattis tristique malesuada.</p>
                     </div>
                 </div>
