--- a/adopciones.html
+++ b/adopciones.html
@@ -35,37 +35,37 @@
             <h2 class="text-center mb-4 pequeños">Perros pequeños</h2>
             <div class="row justify-content-around">
 
-                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3 machomarco bordemacho">
+                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3 machomarco bordemacho animaciontarjeta">
                     <img src="./img/beagle.jpg" class="card-img-top machomarco mt-2" alt="...">
                     <div class="card-body">
-                      <h3 class="card-text macho">Fer</h3>
+                      <h3 class="card-text macho nombremachomotion">Fer</h3>
                       <h5 class="card-text">Edad: 6 meses</h5>
                       <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed eleifend velit.</p>
                     </div>
                 </div>
 
-                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3 machomarco bordemacho">
+                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3 machomarco bordemacho animaciontarjeta">
                     <img src="./img/chihuahua.jpg" class="card-img-top mt-2 machomarco" alt="...">
                     <div class="card-body">
-                      <h3 class="card-text macho">Jalapeño</h3>
+                      <h3 class="card-text macho nombremachomotion">Jalapeño</h3>
                       <h5 class="card-text">Edad: 3 años</h5>
                       <p class="card-text">Teger tortor dui, congue eget porta a, egestas id magna. In non urna pretium tell.</p>
                     </div>
                 </div>
  
-                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3 hembramarco bordehembra">
+                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3 hembramarco bordehembra animaciontarjeta">
                     <img src="./img/yorkshire.jpg" class="card-img-top hembramarco mt-2" alt="...">
                     <div class="card-body">
-                      <h3 class="card-text hembra">Mila</h3>
+                      <h3 class="card-text hembra nombrehembramotion">Mila</h3>
                       <h5 class="card-text">Edad: 2 años</h5>
                       <p class="card-text">Donec mollis volutpat metus nec varius. Proin arcu massa, iaculis id vestibulum sit.</p>
                     </div>
                 </div>
 
-                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3 machomarco bordemacho">
+                <div class="card col-12 col-sm-5 col-md-5 col-lg-2 mb-3 machomarco bordemacho animaciontarjeta">
                     <img src="./img/caniche.jpg" class="card-img-top machomarco mt-2" alt="...">
                     <div class="card-body">
-                      <h3 class="card-text macho">Carlitos</h3>
+                      <h3 class="card-text macho nombremachomotion">Carlitos</h3>
                       <h5 class="card-text">Edad: 5 años</h5>
                       <p class="card-text">Vivamus ornare et ex ac pretium. Vestibulum consectetur porttitor rutrum. Aenean sed.</p>
                     </div>
@@ -73,28 +73,28 @@
             </div>
             <h2 class="text-center mb-4 medianos">Perros medianos</h2>
             <div class="row justify-content-around">
-                <div class="card col-12 col-sm-7 col-md-7 col-lg-3 mb-3 machomarco bordemacho">
+                <div class="card col-12 col-sm-7 col-md-7 col-lg-3 mb-3 machomarco bordemacho animaciontarjeta">
                     <img src="./img/dalmata.jpg" class="card-img-top machomarco mt-2" alt="...">
                     <div class="card-body">
-                      <h3 class="card-text macho">Buster</h3>
+                      <h3 class="card-text macho nombremachomotion">Buster</h3>
                       <h5 class="card-text">Edad: 4 años</h5>
                       <p class="card-text">Curabitur ac placerat lorem. Duis egestas turpis a pharetra fringilla. Duis non nulla velit. Vivamus rutrum neque sit amet risus auctor, eget condimentum.</p>
                     </div>
                 </div>
 
-                <div class="card col-12 col-sm-7 col-md-7 col-lg-3 mb-3 machomarco bordemacho">
+                <div class="card col-12 col-sm-7 col-md-7 col-lg-3 mb-3 machomarco bordemacho animaciontarjeta">
                     <img src="./img/bordercollie.jpg" class="card-img-top machomarco mt-2" alt="...">
                     <div class="card-body">
-                      <h3 class="card-text macho">Einstein</h3>
+                      <h3 class="card-text macho nombremachomotion">Einstein</h3>
                       <h5 class="card-text">Edad: 3 años</h5>
                       <p class="card-text">Proin arcu massa, iaculis id vestibulum sit amet, vehicula a velit. Duis convallis tincidunt gravida. Sed ullamcorper venenatis nisl. Cras mattis tristique malesuada.</p>
                     </div>
                 </div>
 
-                <div class="card col-12 col-sm-7 col-md-7 col-lg-3 hembramarco bordehembra">
+                <div class="card col-12 col-sm-7 col-md-7 col-lg-3 hembramarco bordehembra animaciontarjeta">
                     <img src="./img/corgi.jpg" class="card-img-top hembramarco mt-2" alt="...">
                     <div class="card-body">
-                      <h3 class="card-text hembra">Nugget</h3>
+                      <h3 class="card-text hembra nombrehembramotion">Nugget</h3>
                       <h5 class="card-text">Edad: 4 años</h5>
                       <p class="card-text"> Morbi lobortis leo quis dignissim vehicula. Suspendisse molestie suscipit maximus. Donec sed tellus at risus volutpat dictum. Duis magna quam, condimentum nec nunc at, congue mollis odio.</p>
                     </div>
@@ -104,19 +104,19 @@
             <h2 class="text-center mt-2 mb-4 grandes">Perros grandes</h2>
             <div class="row justify-content-around">
 
-                <div class="card col-12 col-sm-8 col-md-8 col-lg-5 mb-3 machomarco bordemacho">
+                <div class="card col-12 col-sm-8 col-md-8 col-lg-5 mb-3 machomarco bordemacho animaciontarjeta">
                     <img src="./img/Mastiff.jpg" class="card-img-top machomarco mt-2" alt="...">
                     <div class="card-body">
-                      <h3 class="card-text macho">Rocco</h3>
+                      <h3 class="card-text macho nombremachomotion">Rocco</h3>
                       <h5 class="card-text">Edad: 7 años</h5>
                       <p class="card-text"> Nunc eget ipsum nibh. Donec nec ipsum arcu. In luctus sodales turpis, nec cursus massa. Mauris convallis venenatis ipsum, id vulputate mi vehicula ut. Aenean et orci nisl. Pellentesque justo erat, accumsan sit amet elementum sit amet, convallis ac turpis.</p>
                       </div>
                 </div>
 
-                <div class="card col-12 col-sm-8 col-md-8 col-lg-5 hembramarco bordehembra">
+                <div class="card col-12 col-sm-8 col-md-8 col-lg-5 hembramarco bordehembra animaciontarjeta">
                     <img src="./img/pitbull.jpg" class="card-img-top hembramarco mt-2" alt="...">
                     <div class="card-body">
-                      <h3 class="card-text hembra">Leona</h3>
+                      <h3 class="card-text hembra nombrehembramotion">Leona</h3>
                       <h5 class="card-text">Edad: 6 años</h5>
                       <p class="card-text">Nunc rhoncus turpis eget feugiat iaculis. In auctor ex dignissim neque rutrum pharetra. Donec aliquet lectus eros, eget finibus velit ultrices eget. Aenean fermentum metus vel nisi finibus volutpat.</p>
                     </div>
