--- a/chat.html
+++ b/chat.html
@@ -30,7 +30,7 @@
       </nav>
         <header>
             <div class="alert alert-danger text-center alertamarco" role="alert">
-                Esta funcion se encuentra actualmente en mantenimiento,disculpe las molestias.
+                <p class="mb-0 textorojoalerta">Esta funcion se encuentra actualmente en mantenimiento,disculpe las molestias.</p>
               </div>
         </header>
         <main class="row justify-content-center mt-4">
